--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,7 +10,7 @@
     <div class="container">
         <form id="loginForm" class="form" method="POST">
             <h1 class="title">Iniciar Sesión</h1>
-            <label for="email">Email de Registro:</label>
+            <label for="email">Email:</label>
             <input type="email" name="email" id="email" class="input" placeholder="Tu Email" required>
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" class="input" placeholder="Tu Password" required>
