insert-gasto-por-usuario

--- a/views/outs/outs.ejs
+++ b/views/outs/outs.ejs
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
     <div class="container">
         <!-- Botón de Cerrar Sesión -->
         <button id="logoutButton" class="button-confirm" style="margin-bottom: 20px;">Cerrar Sesión</button>
@@ -26,7 +25,7 @@
                 <option value="Tarjeta">Tarjeta</option>
                 <option value="Efectivo">Efectivo</option>
             </select>
-
+            <p id="userEmail" style="margin-left: 10px;">Cargando correo...</p>
             <button type="submit" class="button-confirm">Insertar</button>
         </form>
 
