--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -3,49 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
+    <title>Registrarse</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="py-10">
-    <div class="max-w-md mx-auto my-10">
-        <h1 class="text-4xl my-10 font-normal text-center">Mis <span class="font-normal">Pagos</span></h1>
-        <div class="mt-8 mx-auto max-w-md">
-            <div class="bg-white py-8 px-4 shadow">
-                <form class="space-y-5" method="POST" action="/auth/registro" novalidate>
-                    <div>
-                        <label class="block text-sm uppercase text-gray-500 mb-3 font-bold" for="nombre">Tu Nombre</label>
-                        <input id="nombre" class="w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400" 
-                               placeholder="Tu Nombre" type="text" name="nombre" value="">
-                    </div>
-                    
-                    <div>
-                        <label class="block text-sm uppercase text-gray-500 mb-3 font-bold" for="email">Email de Registro</label>
-                        <input id="email" class="w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400" 
-                               placeholder="Tu Email" type="email" name="email" value="">
-                    </div>
-                    
-                    <div>
-                        <label class="block text-sm uppercase text-gray-500 mb-3 font-bold" for="password">Password</label>
-                        <input id="password" class="w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400" 
-                               placeholder="Tu Password" type="password" name="password">
-                    </div>
+<body>
+    <div class="container">
+        <form id="loginForm" class="form" method="POST">
+            <h1 class="title">Registrarse</h1>
+            <label for="name">Nombre:</label>
+            <input type="text" name="name" id="name" class="input" placeholder="Tu username" required>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" class="input" placeholder="Tu Email" required>
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" class="input" placeholder="Tu Password" required>
 
-                    <div>
-                        <label class="block text-sm uppercase text-gray-500 mb-3 font-bold" for="repetir_password">Repetir Password</label>
-                        <input id="repetir_password" class="w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400" 
-                               placeholder="Repite tu Password" type="password" name="repetir_password">
-                    </div>
+            <!-- Aquí está el enlace de "¿Ya tienes cuenta?" con el nuevo estilo -->
+            <a class="link-session" href="/">¿Ya tienes cuenta? Inicia Sesión</a>
 
-                    <div class="flex items-center justify-between">
-                        <a class="text-gray-500 text-xs" href="/auth/login">¿Ya tienes cuenta? Inicia Sesión</a>
-                        <a class="text-gray-500 text-xs" href="/auth/olvide-password">Olvide mi Password</a>
-                    </div>
-
-                    <input class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" 
-                           type="submit" value="Crear Cuenta">
-                </form>
-            </div>
-        </div>
+            <button type="submit" class="button-confirm">Registrarse</button>
+            <div id="errorMessage" class="error"></div>
+        </form>
     </div>
+    <!--<script src="/js/authHandler.js"></script>-->
 </body>
 </html>
