--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/img/usuario.png" type="image/png">
 </head>
 <body>
     <div class="container">
