--- a/views/outs/outs.ejs
+++ b/views/outs/outs.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,36 @@
     <link rel="icon" href="/img/salida.png" type="image/png">
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <div class="container">
+
+        <header class="navbar">
+            <div class="navbar-container">
+                <div class="logo">
+                    <a class="logo-link">UProblem</a>
+                </div>
+                <a id="logoutButton" class="logout-button" title="Cerrar sesión">
+                    <svg class="logout-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M15 12h4m-4 0l-2-2m2 2l-2 2m-3 4H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v2" />
+                    </svg>
+                </a>
+            </div>
+
+        </header>
         <!-- Botón de Cerrar Sesión -->
-        <button id="logoutButton" class="button-confirm" style="margin-bottom: 20px;">Cerrar Sesión</button>
-        
+        <!-- <button id="logoutButton" class="button-confirm" style="margin-bottom: 20px;">Cerrar Sesión</button> -->
+
         <form id="ingresoForm" class="form">
             <h1 class="title">Registrar Ingreso</h1>
             <label for="monto">Monto:</label>
-            <input type="number" name="monto" id="monto" step="0.01" class="input" placeholder="Ingrese el monto" required>
+            <input type="number" name="monto" id="monto" step="0.01" class="input" placeholder="Ingrese el monto"
+                required>
             <label for="motivo">Motivo:</label>
             <input type="text" name="motivo" id="motivo" class="input" placeholder="Motivo del ingreso" required>
-            
+
             <!-- Combobox con 3 opciones -->
             <label for="opciones">Seleccione una opción:</label>
             <select name="opciones" id="opciones" class="input" required>
@@ -54,4 +73,5 @@
     <script src="/js/formHandler.js"></script>
 
 </body>
+
 </html>
