--- a/views/outs/outs.ejs
+++ b/views/outs/outs.ejs
@@ -7,6 +7,13 @@
     <title>Ingresos</title>
     <link rel="icon" href="/img/salida.png" type="image/png">
     <link rel="stylesheet" href="/css/style.css">
+    <script>
+      Object.defineProperty(window, 'console', {
+        get: function () {
+          throw new Error('Console is disabled');
+        }
+      });
+    </script>
 </head>
 
 <body>
