--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 html,
 body {
     height: 100%;
-    background-color: #f0f0f0;
+    background-color: grey;
     display: flex;
     justify-content: center;
     align-items: center;
